<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/activity_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/check_box_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
        android:id="@+id/emotions_container"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/sentiment_worst_frame"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/invisible_circle">

            <ImageView
                android:id="@+id/sentiment_worst"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                app:tint="@color/sentiment_worst"
                android:src="@drawable/sentiment_worst" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/sentiment_bad_frame"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/invisible_circle">

            <ImageView
                android:id="@+id/sentiment_bad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tint="@color/sentiment_bad"
                android:src="@drawable/sentiment_bad" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/sentiment_neutral_frame"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/invisible_circle">

            <ImageView
                android:id="@+id/sentiment_neutral"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tint="@color/sentiment_neutral"
                android:src="@drawable/sentiment_neutral" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/sentiment_good_frame"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/invisible_circle">

            <ImageView
                android:id="@+id/sentiment_good"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tint="@color/sentiment_good"
                android:src="@drawable/sentiment_good"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/sentiment_best_frame"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/invisible_circle">

            <ImageView
                android:id="@+id/sentiment_best"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:tint="@color/sentiment_best"
                android:src="@drawable/sentiment_best" />
        </FrameLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/note_input_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:visibility="gone"
        android:hint="@string/hint_add_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:helperText="@string/helper_saved_note"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/note_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textAutoCorrect|textMultiLine"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_note_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/icon_add"
            android:text="@string/button_add_note" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_start_time"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/icon_time"
            android:text="@string/button_start_time" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_end_time"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/icon_time"
            android:text="@string/button_end_time" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_done"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>