<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/activity_item"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


...
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:srcCompat="@color/colorAccent" />
        </FrameLayout>

        <ImageButton
            android:id="@+id/expand_options_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_note_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_expand" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_options_button"
...
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintEnd_toStartOf="@+id/expand_options_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_time_text" />

        <TextView
            android:id="@+id/activity_time_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
...
